# Lie-plusplus

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-build-and-test.yml  cmake-single-platform.yml
include/groups/: G3.hpp  Gal3.hpp  In.hpp  SDB.hpp  SEn3.hpp  SO3.hpp  SOT3.hpp  TG.hpp
include/utils/: tools.hpp
tests/: test_common.hpp  test_groups.hpp  tests.cpp
